--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-Flask==2.0.1
-Werkzeug==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-ItsDangerous==2.0.1
-click==8.0.1
-Flask-WTF==0.15.1
-WTForms==2.3.3
-Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.18
+Flask
+Werkzeug
+Jinja2
+MarkupSafe
+ItsDangerous
+click
+Flask-WTF
+WTForms
+Flask-SQLAlchemy
+SQLAlchemy
+Flask-Migrate
+Flask-Login
+Flask-Bcrypt
